Use EventStream instead of List of Events.